- fixed pipes not present in creative menu (#183)
- fixed pipes crashing create (#195)
- fixed extinguished stuff still producing light (#197)
- fixed config being loaded too late causing issues like the hammer durability not being applied on Forge (#207)
- fixed crash after using blink+decoy spell in space (Ars Nouveau) (#208)
- fixed solar panels crashing server (#210)
- removed fabric loader requirement which should fix some quilt versions